--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <title>Glowy Card Effect</title>
+    <style>
+        body {
+            display: grid;
+            place-items: center;
+            font-family: "League Spartan", system-ui, sans-serif;
+            font-size: 1.1rem;
+            line-height: 1.2;
+            background-color: #212121;
+            color: #ddd;
+        }
+    </style>
 </head>
 
 <body>
-<h1>Pricing</h1>
+<main>
+    <h1>Pricing</h1>
+</main>
 
 </body>
 </html>
