--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
+    <link rel="icon" href="img/KWith.png">
     <title>Glowy Card Effect</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -47,6 +48,6 @@
     </div>
 </main>
 
-<script src="script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
